--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
@@ -41,6 +42,13 @@
             </button>
           </li>
         </ul>
+        <div>dfdf</div>
+        <div>dfdf</div>
+        <div>dfdf</div>
+        <div>dfdf</div>
+        <div>dfdf</div>
+        <div>dfdf</div>
+        <div>dfdf</div>
       </nav>
     </header>
     <script src="./scripts/script.js"></script>
