--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
   <meta name="color-scheme" content="dark light" />
   <title>Сложно сосредоточиться</title>
   <link rel="stylesheet" href="./fonts/fonts.css" />
-  <link rel="stylesheet" href="./styles/variables.css" />
   <link rel="stylesheet" href="./styles/globals.css" />
+  <link rel="stylesheet" href="./styles/variables.css" />
   <link rel="stylesheet" href="./styles/style.css" />
   <link rel="stylesheet" href="./styles/dark.css" />
   <link rel="stylesheet" href="./styles/light.css" />
+  <link rel="icon" href="./images/favicon.ico" sizes="any" />
   <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
 </head>
-<body class="page">
-<header class="header decorated-zone">
-  <span aria-hidden="true" class="tag__marker">rec</span>
+<body class="page theme_dark">
+<header class="header decorated-zone content-section">
+  <div class="header_item"></div>
   <nav class="header__theme-menu">
     <ul class="header__theme-menu-list">
       <li class="header__theme-menu-item">
         <button
                 class="header__theme-menu-button header__theme-menu-button_type_light"
         >
-          день
+          День
         </button>
       </li>
       <li class="header__theme-menu-item">
@@ -31,190 +32,228 @@
                 class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
                 disabled
         >
-          авто
+          Авто
         </button>
       </li>
       <li class="header__theme-menu-item">
         <button
                 class="header__theme-menu-button header__theme-menu-button_type_dark"
         >
-          неон
+          Неон
         </button>
       </li>
     </ul>
   </nav>
-  <h1 class="page__title header__text">no focus</h1>
-  <p class="title-decor header__paragraph"
-  >Что делать, когда не можешь делать ничего
-    Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+  <h1 class="header_title header_title-decoration">no focus</h1>
+  <p class="text_content title_decor header_paragraph">
+    Что делать, когда не можешь делать ничего
+    <span>
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо</span
+    >
   </p>
 </header>
-<main class="main__content">
-  <section class="content-section">
-    <h2 class="content-section__title">
+<main>
+  <section class="content-section content-section-decorated">
+    <h2 class="text_content section_title">
       Почему сосредоточиться так сложно
     </h2>
-    <div class="content-section__list">
-      <div class="content-section__item">
-        <h3 class="title-decor">Многозадачность</h3>
-        <p class="content-section__text">
-          Особенно сложно сосредоточиться, когда задач много и все они —
-          важные. Где же легендарная многозадачность, когда она так нужна вам
-          (и всем нанимающим менеджерам этого мира)? А дело в том, что её
-          просто не существует. Исследователи
-          <a
-                  href="https://dana.org/article/multicosts-of-multitasking/"
-                  class="external-link"
-                  target="_blank"
-          >выяснили</a
-          >, что мозгу тяжело концентрироваться даже на двух делах
-          одновременно. А когда в поле внимания попадает несколько важных
-          задач, организм паникует и выделяет кортизол и адреналин — «гормоны
-          стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
-          устаём.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h3 class="title-decor">Дофамин</h3>
-        <p class="content-section__text">
-          С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-          невозможности сосредоточиться замешана и полная противоположность
-          стрессу — дофамин. Это вещество участвует в системе вознаграждения
-          мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
-          что-то более «приятное» для мозгов. Например, смотрим лайки в
-          соцсетях. В это время и выделяется дофамин — и мы чувствуем
-          удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
-          тем больше удовольствия получаешь.
-        </p>
-      </div>
-    </div>
+    <article>
+      <ul class="content_list">
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">Многозадачность</h3>
+          <p class="text_content">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна
+            вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+            её просто не существует. Исследователи
+            <a
+                    href="https://dana.org/article/multicosts-of-multitasking/"
+                    target="_blank"
+            >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин —
+            «гормоны стресса». Из-за этого мы работаем невнимательно:
+            ошибаемся и быстро устаём.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">Дофамин</h3>
+          <p class="text_content">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+            нашей невозможности сосредоточиться замешана и полная
+            противоположность стрессу — дофамин. Это вещество участвует в
+            системе вознаграждения мозга. Причём тут он? Мы часто
+            отвлекаемся от важной задачи на что-то более «приятное» для
+            мозгов. Например, смотрим лайки в соцсетях. В это время и
+            выделяется дофамин — и мы чувствуем удовольствие. Получается
+            замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+            получаешь.
+          </p>
+        </li>
+      </ul>
+    </article>
   </section>
-  <section class="content-section">
-    <h2 class="content-section__title">
+  <section class="content-section content-section-decorated">
+    <h2 class="text_content section_title section_title-decoration">
       Что снижает концентрацию внимания?
     </h2>
-    <div class="content-section__list">
-      <div class="content-section__item">
-        <h3 class="title-decor">Многозадачность</h3>
-        <p class="content-section__text">
-          Как концентрация может снижаться из-за… концентрации? Любая
-          стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
-          мозг постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время
-          — невозможно. Концентрация — мышца, и она может не выдержать, если
-          не давать ей отдохнуть.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h3 class="title-decor">Еда</h3>
-        <p class="content-section__text">
-          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-          доставляют в мозг энергию и помогают ему лучше работать. Но уходит
-          эта энергия также быстро, как и приходит. А мы в результате попадаем
-          на «углеводные качели»: как только действие «быстрых углеводов»
-          заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
-          больше быстрых углеводов.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h3 class="title-decor">Гаджеты</h3>
-        <p class="content-section__text">
-          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-          наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-          утятами. В результате мозг пытается переключиться с одной задачи на
-          другую — и просто не может. А чтобы вернуться к состоянию полной
-          концентрации, человеку в среднем нужно 20 минут. Вот и получается,
-          что чем больше времени мы проводим в гаджетах, тем больше времени
-          затем нужно, чтобы вернуться к работе.
-        </p>
-      </div>
-    </div>
+    <article>
+      <ul class="content_list content_list-decorated">
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">Многозадачность</h3>
+          <p class="text_content">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+            наш мозг постоянно «сканировать» окружающую среду на предмет
+            опасности. Например, читать новости вместо работы. Но быть
+            собранными всё время — невозможно. Концентрация — мышца, и она
+            может не выдержать, если не давать ей отдохнуть.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">Еда</h3>
+          <p class="text_content">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но
+            уходит эта энергия также быстро, как и приходит. А мы в
+            результате попадаем на «углеводные качели»: как только действие
+            «быстрых углеводов» заканчивается, мы чувствуем усталость и
+            сонливость. И хотим ещё больше быстрых углеводов.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">Гаджеты</h3>
+          <p class="text_content">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с
+            забавными утятами. В результате мозг пытается переключиться с
+            одной задачи на другую — и просто не может. А чтобы вернуться к
+            состоянию полной концентрации, человеку в среднем нужно 20
+            минут. Вот и получается, что чем больше времени мы проводим в
+            гаджетах, тем больше времени затем нужно, чтобы вернуться к
+            работе.
+          </p>
+        </li>
+      </ul>
+    </article>
   </section>
-  <section class="content-section">
-    <h2 class="content-section__title">
+  <section class="content-section content-section-decorated">
+    <h2 class="text_content section_title">
       Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
       секунд)
     </h2>
-    <div class="content-section__list">
-      <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
-      <div class="content-section__item">
-        <h4 class="content-section__subtitle margin">
-          Представьте небо и облака
-        </h4>
-        <p class="content-section__text">
-          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-          успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-          раз и мешают эти сложные задачи делать. В такие моменты можно
-          закрыть глаза и представить, что чистое небо — это вы, а облака —
-          тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-          где-то там, за тучами, и никуда не денется. Это упражнение поможет
-          вернуться в настоящий момент, а не волноваться о потенциальных
-          проблемах из будущего.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h4 class="content-section__subtitle">Включите музыку</h4>
-        <p class="content-section__text">
-          Но не любую, и не любимую. Любимая может быть связана с сильными
-          положительными эмоциями, которые тоже очень сильно отвлекают.
-          Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-          попробовать включить плейлист в «белым шумом» или нейромузыкой.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h4 class="content-section__subtitle">Прогуляйтесь</h4>
-        <p class="content-section__text">
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-          <a
-                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-                  class="external-link"
-                  target="_blank"
-          >показал</a
-          >, что созерцание природы повышает концентрацию, в то время как
-          после просмотра городских пейзажей она наоборот понижается. Можно
-          совместить прогулку с физическими упражнениями или бегом — так в
-          мозг поступит ещё больше кислорода и он будет лучше работать. Но и
-          простая двадцатиминутная прогулка — тоже отличный вариант.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h4 class="content-section__subtitle">Хорошо ешьте</h4>
-        <p class="content-section__text">
-          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-          которые препятствуют резким скачкам сахара в крови. Например, с
-          высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-          фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-        </p>
-      </div>
-      <div class="content-section__item">
-        <h4 class="content-section__subtitle">Читайте</h4>
-        <p class="content-section__text">
-          Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-          прочитать пост в соцсети, достаточно нескольких минут или даже
-          секунд. А вот интересная книга способна затянуть и на несколько
-          часов и круто тренирует направленное внимание.
-        </p>
-      </div>
-    </div>
+    <article>
+      <ul class="content_list">
+        <li class="content_list-item">
+          <h3 class="text_content title_decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+        </li>
+        <li class="content_list-item">
+          <h4 class="text_content title_decor li_title_decor">
+            Представьте небо и облака
+          </h4>
+          <p class="text_content">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая
+            помогает успокоиться. Ведь часто именно тревожные мысли о
+            сложных задачах как раз и мешают эти сложные задачи делать. В
+            такие моменты можно закрыть глаза и представить, что чистое небо
+            — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+            ясное небо всегда будет где-то там, за тучами, и никуда не
+            денется. Это упражнение поможет вернуться в настоящий момент, а
+            не волноваться о потенциальных проблемах из будущего.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h4 class="text_content title_decor li_title_decor">
+            Включите музыку
+          </h4>
+          <p class="text_content">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h4 class="text_content title_decor li_title_decor">
+            Прогуляйтесь
+          </h4>
+          <p class="text_content">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a
+                    href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                    target="_blank"
+            >показал</a
+            >, что созерцание природы повышает концентрацию, в то время как
+            после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом —
+            так в мозг поступит ещё больше кислорода и он будет лучше
+            работать. Но и простая двадцатиминутная прогулка — тоже отличный
+            вариант.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h4 class="text_content title_decor li_title_decor">
+            Хорошо ешьте
+          </h4>
+          <p class="text_content">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+            чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+            пшеницы.
+          </p>
+        </li>
+        <li class="content_list-item">
+          <h4 class="text_content title_decor li_title_decor">Читайте</h4>
+          <p class="text_content">
+            Настоящие бумажные книги. Это правда помогает с концентрацией:
+            чтобы прочитать пост в соцсети, достаточно нескольких минут или
+            даже секунд. А вот интересная книга способна затянуть и на
+            несколько часов и круто тренирует направленное внимание.
+          </p>
+        </li>
+      </ul>
+    </article>
   </section>
-  <section class="content-section">
-    <h2 class="title-decor">А можно в картинках?</h2>
-    <div class="content-section__images">
-      <img src="./images/sunset.png" loading="lazy" alt="Закат с горами" class="sunset" />
-      <img
+  <section class="content-section content-section-decorated">
+    <h2 class="text_content title_decor">А можно в картинках?</h2>
+    <div class="article_content">
+      <picture class="picture"
+      ><img
+              class="content_picture"
+              src="./images/sunset.png"
+              alt="Закат на фоне гор"
+      /></picture>
+      <picture class="picture"
+      ><img
+              class="content_picture"
               src="./images/ice-cream.png"
-              alt="Тарелка с мороженным"
-              loading="lazy"
-              class="ice-cream"
-      />
-      <img src="./images/tape.png" alt="Касета" loading="lazy" class="tape"/>
-      <img src="./images/books.png" alt="Стопка книг" loading="lazy" class="books"/>
-      <img src="./images/street.png" alt="Улица" loading="lazy" class="street"/>
+              alt="Мороженое со смайликами, ягодами и фруктами"
+      /></picture>
+      <picture class="picture"
+      ><img
+              class="content_picture"
+              src="./images/tape.png"
+              alt="Аудиокассета"
+      /></picture>
+      <picture class="picture"
+      ><img
+              class="content_picture"
+              src="./images/books.png"
+              alt="Стопка книг"
+      /></picture>
+      <picture class="picture"
+      ><img class="content_picture" src="./images/street.png" alt="Улица"
+      /></picture>
     </div>
   </section>
 </main>
 <footer class="footer decorated-zone">
-  <h2 class="footer-title">focus</h2>
+  <h2 class="header_title">focus</h2>
 </footer>
 <script src="./scripts/script.js"></script>
 </body>
